Changed CI branch name to run integration tests on the fork.
Signed-off-by: Ankit Saurabh <sauraank@amazon.co.uk>

--- a/.github/workflows/integration_main.yml
+++ b/.github/workflows/integration_main.yml
@@ -2,7 +2,7 @@ name: Integration tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "workflow_change" ]
   merge_group:
     types: [ "checks_requested" ]
 
